--- a/yang-demo/templates/service.yaml
+++ b/yang-demo/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "yang-demo.fullname" . }}
+  name: {{ include "yang-demo.fullname" . }} - {{ Values.service.env}}
   labels:
 {{ include "yang-demo.labels" . | indent 4 }}
 spec:
