--- a/yang_demo_values_prod_1.0.0.yaml
+++ b/yang_demo_values_prod_1.0.0.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: chen2319/demo
-  tag: release-1.2.6
+  tag: release-1.0.0
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -17,7 +17,7 @@ service:
   type: NodePort
   port: 80
   nodeport: 30095
-  env: dev
+  env: prod
 
 ingress:
   enabled: false
